<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlackBackgroud"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context="pl.chebad.bond.dam.musicstructureapp.SearchActivity">

    <TextView
        style="@style/MainMenuTittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textSize="@dimen/search_size"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_size_view"
        android:background="@color/colorLineMainActivity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_text_field_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:hint="@string/search_your_song"
            android:textColor="@color/mainTextColor"
            android:textColorHint="@color/cardview_dark_background"
            android:textSize="@dimen/search_song_text_size" />

        <ImageButton
            android:id="@+id/button_search"
            style="@style/ButtonClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/image_button_clicked"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_size_view"
        android:background="@color/colorLineMainActivity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/standard_padding_10dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:cardCornerRadius="@dimen/card_view_corner_radius">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/standard_padding_10dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleX="0.5"
                    android:scaleY="0.5"
                    android:src="@drawable/music"
                    tools:ignore="ContentDescription" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/scroll_view_margin">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/scroll_view_margin"
                        android:text="@string/search_activity_description"
                        android:textColor="@color/mainTextColor"
                        android:textSize="@dimen/text_size_of_text_views" />
                </ScrollView>

            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>
